@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add [AlienBase::Wrapper] plugin
 
 0.23      2017-08-23 07:59:38 -0400
   - Add x_alienfile meta
